k8s/talos/infra/traefik/httproute-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - traefik.local.bigd.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: traefik-dashboard
          port: 9000
